--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="section__text__h1">Joe Mama</h1>
-            <p class="section__text__p2">Frontend Developer</p>
+            <p class="section__text__p2">Professional Wrestler</p>
 
             <div class="btn__container">
                 <button 
